# git-twig

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  index.css  index.html  mint.json  mkdocs.yml
.github/workflows/: deploy.yml  release.yml  test.yml
docs/: icons.md  index.md  presentation_plan.md  progress.md  quickstart.md  release_guide.md  roadmap.md  visual_design.md
docs/features/: compact-view.md  navigation.md  visual-mode.md
docs/site/: index.css  index.html
docs/stylesheets/: landing.css
scripts/: setup_debug_repo.sh
scripts/hooks/: pre-commit  pre-push
src/: config.rs  git.rs  icons.rs  interactive.rs  main.rs  node.rs  parser.rs  theme.rs
src/git/: patch.rs
src/tui/: app.rs  event.rs  history.rs  mod.rs  ui.rs
