[package]
name = "git-twig"
version = "1.2.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
image = "0.25.9"
ratatui = "0.26"
crossterm = "0.27"

unicode-width = "0.1"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"

[workspace.metadata.dist]
# The preferred name of your installer
formula = "git-twig"
# Target the user's homebrew-tap
tap = "MartinP7r/tap"
# Repository for releases
repository = "https://github.com/MartinP7r/git-twig"
