[package]
name = "git-twig"
version = "1.2.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/MartinP7r/git-twig"
description = "A high-performance, interactive git status visualizer"
homepage = "https://martinp7r.github.io/git-twig/"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
anyhow = "1.0"
image = "0.25.9"
ratatui = "0.26"
crossterm = "0.27"

unicode-width = "0.1"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"

# cargo-dist configuration
[workspace.metadata.dist]
# CI backends
cargo-dist-version = "0.30.3"
ci = "github"
# Where to host releases
hosting = ["github"]
# Build targets
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
]
# Installers to generate
installers = ["shell", "homebrew"]
# Homebrew tap
tap = "MartinP7r/homebrew-tap"
# Formula name
formula = "git-twig"
# Enable GitHub Releases
publish-jobs = ["homebrew"]

# Build profile for cargo-dist
[profile.dist]
inherits = "release"
lto = "thin"




